--- a/DefendArland/Missions/Custom/DefendArland5Waves.conf
+++ b/DefendArland/Missions/Custom/DefendArland5Waves.conf
@@ -1,6 +1,6 @@
 SCR_MissionHeaderCombatOps {
- World "{91923E58F98E33E1}Worlds/DefendArland.ent"
- m_sName "Defend Arland"
+ World "{3CC4D71D54B0012E}Worlds/Defend 5 Waves/DefendArland.ent"
+ m_sName "Defend Arland - 5 Waves"
  m_sAuthor "Devlin"
  m_sPath "Missions/DefendArland.conf"
  m_sDescription "Defend the airport against waves of russians."
