--- a/DefendArland/Missions/Custom/DefendArland5Waves.conf
+++ b/DefendArland/Missions/Custom/DefendArland5Waves.conf
@@ -2,9 +2,9 @@ SCR_MissionHeaderCombatOps {
  World "{3CC4D71D54B0012E}Worlds/Defend 5 Waves/DefendArland.ent"
  m_sName "Defend Arland - 5 Waves"
  m_sAuthor "Devlin"
- m_sPath "Missions/DefendArland.conf"
- m_sDescription "Defend the airport against waves of russians."
- m_sDetails "Russians have surrounded us, we need to hold this position and keep them out for as long as we can."
+ m_sPath "Missions/DefendArland5Waves.conf"
+ m_sDescription "Survive waves of enemy forces and ensure the safe extraction of all personnel."
+ m_sDetails "The Arland region has recently become a hotspot for enemy activity, with hostile forces launching waves of attacks against our position. Intelligence indicates that the enemy is massing troops for an ongoing assault, and we’ve been tasked with holding the line until reinforcements can arrive. Our primary objective is to defend key locations, repel enemy waves, and await the extraction vehicle for evacuation."
  m_sGameMode "#AR-CombatScenario_Name"
  m_iPlayerCount 12
  m_bRandomStartingDaytime 1
