--- a/DefendArland/Missions/Custom/DefendArlandEndless.conf
+++ b/DefendArland/Missions/Custom/DefendArlandEndless.conf
@@ -2,9 +2,9 @@ SCR_MissionHeaderCombatOps {
  World "{155731F4AFEDAFBB}Worlds/Defend Endless/DefendArland.ent"
  m_sName "Defend Arland - Endless"
  m_sAuthor "Devlin"
- m_sPath "Missions/DefendArland.conf"
- m_sDescription "Defend the airport against waves of russians."
- m_sDetails "Russians have surrounded us, we need to hold this position and keep them out for as long as we can."
+ m_sPath "Missions/DefendArlandEndless.conf"
+ m_sDescription "Survive waves of enemy forces and hold your position as long as possible."
+ m_sDetails "The Arland region is currently under siege by hostile forces who have launched a series of relentless attacks aimed at overwhelming our defenses. Intelligence suggests the enemy is preparing to escalate their efforts with even more advanced tactics and larger units. Our mission is to hold the line against these waves of enemy forces, construct effective defenses, and ensure our position remains intact until reinforcements can break through."
  m_sGameMode "#AR-CombatScenario_Name"
  m_iPlayerCount 12
  m_bRandomStartingDaytime 1
