--- a/DefendArland/Missions/Custom/DefendArlandEndless.conf
+++ b/DefendArland/Missions/Custom/DefendArlandEndless.conf
@@ -7,7 +7,7 @@ SCR_MissionHeaderCombatOps {
  m_sDetails "The Arland region is currently under siege by hostile forces who have launched a series of relentless attacks aimed at overwhelming our defenses. Intelligence suggests the enemy is preparing to escalate their efforts with even more advanced tactics and larger units. Our mission is to hold the line against these waves of enemy forces, construct effective defenses, and ensure our position remains intact until reinforcements can break through."
  m_sGameMode "#AR-CombatScenario_Name"
  m_iPlayerCount 128
- m_eEditableGameFlags DebugMode
+ m_eEditableGameFlags EndlessMode
  m_eDefaultGameFlags EndlessMode
  m_bRandomStartingDaytime 1
 }
